js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-import-call-unknown.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
